name:           network-uri
version:        0.0.0.0
license:        BSD3
license-file:   LICENSE
maintainer:     Johan Tibell <johan.tibell@gmail.com>
synopsis:       URI library
description:    URI library
category:       Network
build-type:     Simple
cabal-version:  >=1.8
homepage:       https://github.com/haskell/network-uri
bug-reports:    https://github.com/haskell/network-uri/issues

library
  exposed-modules:
    Network.URI

  build-depends:
    base >= 3 && < 5,
    parsec >= 3.0

  extensions:
      DeriveDataTypeable

test-suite uri
  hs-source-dirs: tests
  main-is: uri001.hs
  type: exitcode-stdio-1.0

  build-depends:
    base < 5,
    HUnit,
    network-uri,
    test-framework,
    test-framework-hunit

source-repository head
  type:     git
  location: git://github.com/haskell/network-uri.git
